Add: Video promo

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,13 +1,16 @@
 ---
 sidebar_position: 1
+
 ---
+
+import ReactPlayer from 'react-player'
 
 # Introducción
 
 ## 👋 Descripción general
 Juanito Shoes es una tienda virtual que opera tanto a través de una aplicación web como de una aplicación móvil, y está dedicada a la venta de calzado. Esta aplicación se ha desarrollado con un enfoque centrado en el cliente, proporcionando una experiencia de compra eficiente, personalizada y fácil de usar.
 
-![Banner](./img/banner.jpg)
+<ReactPlayer url="https://www.youtube.com/embed/9YaSbNddEr0?si=CJXjzUwfi-047Cmu" width="100%" height="500px" playing controls></ReactPlayer>
 
 ## ⚙️ Funcionalidades Principales
 
