--- a/docs/files-link.mdx
+++ b/docs/files-link.mdx
@@ -2,14 +2,22 @@
 sidebar_position: 11
 ---
 
-import ReactPlayer from 'react-player'
+import ReactPlayer from "react-player";
 
 # Archivos y enlaces
 
 ## Tutorial
-<ReactPlayer url="https://www.youtube.com/embed/GCkjJk75MuQ?si=vd2RM9211Zq63A_S" width="100%" height="500px" playing controls></ReactPlayer>
+
+<ReactPlayer
+  url='https://youtu.be/fgCsv4ExGsI'
+  width='100%'
+  height='500px'
+  playing
+  controls
+></ReactPlayer>
 
 ### Enlaces
+
 - [Codigo de móvil](https://github.com/osmarmora05/juanito_shoes_MobileApp)
 - [Codigo de web](https://github.com/EdCenten0/JuanitoShoesStore_web)
 - [Codigo de la documentación](https://github.com/osmarmora05/juanito_shoes_docs)
